[gd_scene load_steps=3 format=3 uid="uid://ch3k6y8mf3j0v"]

[ext_resource type="Script" path="res://UI/game_over_screen.gd" id="1_q15k8"]

[sub_resource type="SystemFont" id="SystemFont_n8x0w"]
font_names = PackedStringArray("Noto Sans", "Sans-Serif")
font_weight = 999

[node name="GameOverScreen" type="CanvasLayer"]
process_mode = 2
visible = false
script = ExtResource("1_q15k8")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 2

[node name="GameOverText" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 76
text = "Game Over"

[node name="GridContainer" type="GridContainer" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
columns = 2

[node name="Label" type="Label" parent="CenterContainer/Panel/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_n8x0w")
text = "Remaining Time"

[node name="RemainingTimeLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_n8x0w")
text = "3:0 min"

[node name="Label2" type="Label" parent="CenterContainer/Panel/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_n8x0w")
text = "Points"

[node name="PointsLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_n8x0w")
text = "0"

[node name="Label3" type="Label" parent="CenterContainer/Panel/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_n8x0w")
text = "Failed"

[node name="FailedLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_n8x0w")
text = "0"

[node name="RestartButton" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Restart"

[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
